# VegaCLI

./: .gitignore  README.md  app.py  pyproject.toml
config/: __init__.py  settings.py
core/: __init__.py
docs/: architecture.md  decisions.md  execution-flow.md  roadmap.md
types/: __init__.py  message.py  provider.py  tool.py
vega_cli/: __init__.py  __main__.py
vega_cli/agent/: agent.py
vega_cli/chatSession/: chat_session.py
vega_cli/cli/: app.py  banner.py  commands.py  renderer.py
vega_cli/config/: __init__.py
vega_cli/core/: container.py
vega_cli/prompts/: base.py
vega_cli/providers/: base.py  factory.py  lmstudio.py
vega_cli/runtime/: runtime.py
vega_cli/types/: event.py  response.py
